@@ -1,5 +1,6 @@
 Progression 0.4.0
   Can drag the mouse to scroll through the tree editor
+  Only display links when criteria are in the same tab
 
 Progression 0.3.4
   Fix Potential crash when rendering certain entities in the editor
